better align the close slideshow button, fixes #248

--- a/Apps/photosv0.9/static/js/themes/classic/galleria.classic.css
+++ b/Apps/photosv0.9/static/js/themes/classic/galleria.classic.css
@@ -91,8 +91,8 @@
     height: 20px;
     width: 155px;
     position: absolute;
-    top: 10px;
-    right: 300px;
+    top: 25px;
+    right: 10px;
     background-position: -730px -5px;
     opacity: .5;
     filter: alpha(opacity=50);
